web-applications/reactjs-expressjs/k8s/daemon-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daemon-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: daemon
  ports:
    - port: 3000
      targetPort: 3000
