web-applications/reactjs-expressjs/k8s/ingress-service.yaml
#apiVersion: extensions/v1beta1 # deprecated (if using kubectl: >1.15.0)
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
#    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod' # to use lets encrypt cert
#    nginx.ingress.kubernetes.io/ssl-redirect: 'true' # force user redirection to TLS/SSL
spec:
  #  tls:
  #    - hosts:
  #        - some-domain.com
  #        - www.some-domain.com
  #      secretName: k8s-multi-com # reference secret specified in certificate.yaml
  rules:
    #    - host: some-domain.com
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
#    - host: www.some-domain.com # must specify different host for www.
#      http:
#        paths:
#          - path: /?(.*)
#            backend:
#              serviceName: client-cluster-ip-service
#              servicePort: 3000
#          - path: /api/?(.*)
#            backend:
#              serviceName: server-cluster-ip-service
#              servicePort: 5000
